Updating info about script arguments
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@50415 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Plotter/README
+++ b/Plotter/README
@@ -16,6 +16,7 @@ You can use these in a parser function like so:
 
 {{#plot:
 |script=<functionname>
+|scriptarguments=arg1,arg2,...
 |data=1,2
 3,4}}
 
