Changed class names, function names, etc. to reflect the changes to the extension name make earlier.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@50630 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Plotters/README
+++ b/Plotters/README
@@ -25,7 +25,7 @@ You can use these in a parser function like so:
 |data=1,2
 2,4}}
 
-Currently, only PlotKit is supported; but other javascript plotting libraries
+Currently, only PlotKit, and generic canvas drawing is supported; but other javascript plotting libraries
 will be supported in the future.
 
 This code is very alpha quality right now; many features may not work.
