--- a/ReplaceText/README
+++ b/ReplaceText/README
@@ -1,6 +1,6 @@
 Replace Text Extension
 
-        Version 0.5.3
+        Version 0.6
         Yaron Koren and Niklas Laxström
 
 This is free software licenced under the GNU General Public Licence. Please
@@ -12,9 +12,8 @@ full text and terms of the licence.
 Replace Text is an extension to MediaWiki that creates a new special page,
 Special:ReplaceText, available to anyone who has the 'replacetext'
 privilege, that does a text find-and-replace on all pages in the wiki,
-except the Talk pages and the ones in the wiki's own project namespace.
-Both the contents of pages and their titles can be modified. The search is
-case-sensitive.
+selectable by namespace. Both the contents of pages and their titles can be
+modified. The search is case-sensitive.
 
 Since the replacement is not undoable, if the replacement string is
 blank or a string that is already contained in the wiki, the 'ReplaceText'
