Big changes to OpenID extension: * Removed Special:OpenIDFinish, merged in Special:OpenIDLogin * removed unused methods in SpecialOpenID class * (bug 17632) Multiple URLs for an user is now supported, requires schema change (patch included in patch-uoi_user-not-unique.sql) * Added URLs list on Special:Preferences * (bug 18934) User created by OpenID are now logged in user creation log * Use XML::* methods rather than raw HTML * Changed some message from raw HTML to wikitext * (bug 17660) Users can now choose which options they want to update on login * Options are only changed if they are present in sreg (they were previously set to either '' or null if not present) * (bug 17634) Confirmation mails are now sent when the email address changed from OpenID * Break lines at 80 chars in README file * updated TODO file
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@52236 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/OpenID/TODO
+++ b/OpenID/TODO
@@ -8,7 +8,7 @@
 + Function to let skins tell if user is OpenID user
 + Function to let skins know user's OpenID URL
 + Interwiki login
-- drop-down for username prefixes (Yahoo, etc.)
++ drop-down for username prefixes (Yahoo, etc.)
 + server mode login
 + server mode trust form
 + server mode share fields form
@@ -24,7 +24,7 @@
 + hide openid.server for non-user pages
 - optimize trust storage
 + change trust data separators from , and | to FS and RS
-- User preferences tab for OpenID
++ User preferences tab for OpenID
 - Manage allow-to-trust settings in User preferences
 - Optionally redirect User: page to OpenID URL
 - If user logs in with OpenID, add a cookie, and auto-login next time
@@ -54,7 +54,7 @@
 - deal with difference between canonical ID and "display ID" with XRIs
 + add more explanatory text to the default login instructions (copy Wikitravel text)
 - add a public-domain Help:OpenID.wiki
-- add more than one OpenID to a user account
++ add more than one OpenID to a user account
 + link to Special:OpenIDConvert if user is already logged in
 - support RP discovery
 - AJAX login, rather than klutzy JS form
