--- a/UsabilityInitiative/README
+++ b/UsabilityInitiative/README
@@ -11,4 +11,4 @@ $wgPrefStatsTimeUnit = 60*60*24;
  
  
 #enable the toolbar global: 
-$wgEditToolbarGlobalEnable
+$wgEditToolbarGlobalEnable = true;
