fixed case for wgFFmpeg2theoraLocation
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@84564 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/TimedMediaHandler/README
+++ b/TimedMediaHandler/README
@@ -85,7 +85,7 @@ server.
 
 Set the ffmpeg2theora binary location with:
 
-    $wgffmpeg2theoraLocation = '/path/to/ffmpeg2theora';
+    $wgFFmpeg2theoraLocation = '/path/to/ffmpeg2theora';
 
 Download ffmpeg2theora from: http://firefogg.org/nightly/
 
