fixes to 84988 ( updated transcode keys in settings and i18n )
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@85054 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/TimedMediaHandler/README
+++ b/TimedMediaHandler/README
@@ -18,6 +18,9 @@ To install this extension, add the following to the end of your LocalSettings.ph
 	// TimedMediaHandler
     require( "$IP/extensions/TimedMediaHandler/TimedMediaHandler.php" );
 
+	// For boxes doing transcoding you should increase the allocated shell memmory:
+	$wgMaxShellMemory = 102400*64;
+
 
 Kaltura html5 player library
 -----
