moved test files to tests keeps with convention
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@85084 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/TimedMediaHandler/README
+++ b/TimedMediaHandler/README
@@ -18,7 +18,7 @@ To install this extension, add the following to the end of your LocalSettings.ph
 	// TimedMediaHandler
     require( "$IP/extensions/TimedMediaHandler/TimedMediaHandler.php" );
 
-	// For boxes doing transcoding you should increase the allocated shell memmory:
+	// For boxes doing transcoding you should increase the allocated shell memory:
 	$wgMaxShellMemory = 102400*64;
 
 
