--- a/SemanticMediaWiki/RELEASE-NOTES
+++ b/SemanticMediaWiki/RELEASE-NOTES
@@ -5,9 +5,9 @@ For a documentation of all features, see http://semantic-mediawiki.org
 * Changed the way in which units of measurement work. Type:Number now does not
   accept any units, but units can be used with custom types as before. However
   only units with a conversion factor on the custom type page are accepted.
-
-== SMW 1.5.7 ==
-
+* Changed the way parameters in query printers are specified and handled
+  using the Validator extension. This includes improvements to the parameter
+  options in the Special:Ask GUI. 
 * Added UNIX-style DSV (Delimiter-separated values) result format.
 
 == SMW 1.5.6 ==
