--- a/LiveTranslate/RELEASE-NOTES
+++ b/LiveTranslate/RELEASE-NOTES
@@ -8,7 +8,7 @@ Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/t
 2011-04-21
 
 * Added settings to specify per-namespace if the translation control should be shown or not.
-* Use of FormatJson::encode instead of josn_encode for compatibility with PHP5 < 5.2.
+* Use of FormatJson::encode instead of json_encode for compatibility with PHP5 < 5.2.
 
 === Version 0.5 ===
 2011-01-16
