--- a/GPoC/README
+++ b/GPoC/README
@@ -1,3 +1,3 @@
-This is the Proof of Concept for YuviPanda's GSoC 2011 Project.
+Extension to provide Asssessment parsing and collection/filtering based on assessments for creating collections of articles. Used primarily for the Wikipedia Offline projeect.
 
-Throwaway code. Don't blame me if it cuts off your left foot.
+This is YuviPanda's GSoC 2011 Project. The extension works only on MySQL, with a proper engine that supports Transactions.
