Flesh out 2 more SQL queries, set proper getQueryInfo() array
Fix README syntax


git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@91302 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/MetricsReporting/README
+++ b/MetricsReporting/README
@@ -25,7 +25,7 @@ class BalloonsPerWikipedianMetric extends ApiAnalyticsBase {
 			'table' => array(),
 			'conds' => array(),
 			'options' => array(),
-			'join_conds' => array() ),
+			'join_conds' => array(),
 		);
 	}
 
