Needs $IP, to accomodate wikis with different directory structure
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@91487 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ArchiveLinks/INSTALL
+++ b/ArchiveLinks/INSTALL
@@ -1,6 +1,6 @@
 To install add the following to LocalSettings.php
 
-	require_once( './extensions/ArchiveLinks/ArchiveLinks.php' );
+	require_once( "$IP/extensions/ArchiveLinks/ArchiveLinks.php" );
 
 Configuration settings are in the array $wgArchiveLinksConfig, which is currently defined in ArchiveLinks.php for testing purposes.
 
