follow up to r91954
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@91955 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMaps/RELEASE-NOTES
+++ b/SemanticMaps/RELEASE-NOTES
@@ -25,6 +25,8 @@ See the maps release notes for all changes not specific to Semantic Maps.
 
 * Added 'update map' button to all form inputs.
 
+* Fixed PostGres support for distance queries.
+
 === Semantic Maps 0.7.3 ===
 (2010-11-30)
 
