ParserPlayground: run a diff on round-trip output that mismatches in the CLI batch test.
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92175 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/ParserPlayground/tests/README
+++ b/ParserPlayground/tests/README
@@ -4,5 +4,6 @@ Batch-testing tools loading the parsing code into node.js, and going through a M
 
 Need npm modules:
 * jquery
-* libxmljs
+* diff
+* libxmljs (requires native compilation)
 
