--- a/QPoll/README
+++ b/QPoll/README
@@ -1,4 +1,6 @@
-MediaWiki extension QPoll, version 0.8.0a
+== MediaWiki extension QPoll, version 0.8.0a ==
+
+=== v0.7.0 ===
 
 This extension allows to create polls embedded into the wikipages. Every poll
 may contain a set of the questions of various types. The polls can be "chained"
@@ -8,7 +10,7 @@ unique, single or multiple category selections. Categories can be placed into
 the groups (metacategories also known as category spans) to make a
 "subquestions" inside a question. Optional dependence of the question's
 proposal text on the user's choice of category in another previously voted
-poll.
+poll. Categories can be checkboxes, radiobuttons or text fields.
 
 === v0.8.0a ===
 Now it is possible to:
@@ -17,7 +19,11 @@ Now it is possible to:
 * Generate and store interpretations / marks / scores
 * Highlight wrong answers to question proposals
 * Log and limit number of answer attempts
+* Select number of random questions for every user of the particular poll
+  (similar to Russian EGE test)
 
 which allows to use the extension as education tool.
+
+Documentation will be updated when the extension will become stable enough.
 
 See http://mediawiki.org/wiki/Extension:QPoll for further details.
