--- a/UploadWizard/INSTALL
+++ b/UploadWizard/INSTALL
@@ -10,5 +10,6 @@ UploadWizard Extension, v.1.1
 	require_once( "$IP/extensions/UploadWizard/UploadWizard.php" );
 
 * check out the Special:Version page to verify the installation 
+* make sure that your $IP/images directory is writable by the web server
 
 See http://www.mediawiki.org/wiki/Extension:UploadWizard for further details.
