--- a/SemanticMaps/RELEASE-NOTES
+++ b/SemanticMaps/RELEASE-NOTES
@@ -7,6 +7,11 @@ version of Semantic Maps. You can find the most upt-do-date version at
 http://www.mediawiki.org/wiki/Extension:Semantic_Maps/Version_history#Semantic_Maps_change_log
 
 
+=== Semantic Maps 1.0.1 ===
+(2011-xx-xx)
+
+* 
+
 === Semantic Maps 1.0 ===
 (2011-07-19)
 
