--- a/Maps/RELEASE-NOTES
+++ b/Maps/RELEASE-NOTES
@@ -7,6 +7,11 @@ version of Maps. You can find the most up-do-date version at
 http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log
 
 
+=== Maps 1.0.1 ===
+(2011-xx-xx)
+
+* 
+
 === Maps 1.0 ===
 (2011-07-19)
 
