Partial revert of r92545, apparently it was just mistake in CLDR's side (In case I'm wrong there is one line that need to be fixed "unzip common.zip -d core")
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92615 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/cldr/README
+++ b/cldr/README
@@ -11,8 +11,8 @@ Download newest data from CLDR site:
  http://www.unicode.org/cldr/repository_access.html
 
 Example:
- wget http://www.unicode.org/Public/cldr/2.0.1/common.zip
- unzip common.zip -d core
+ wget http://www.unicode.org/Public/cldr/2.0.1/core.zip
+ unzip core.zip -d core
  php rebuild.php
 
 == Usage ==
