Fixed handling of the semantic link caption in the geographical coordinate datavalue class
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@92880 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/SemanticMaps/RELEASE-NOTES
+++ b/SemanticMaps/RELEASE-NOTES
@@ -10,7 +10,7 @@ http://www.mediawiki.org/wiki/Extension:Semantic_Maps/Version_history#Semantic_M
 === Semantic Maps 1.0.1 ===
 (2011-xx-xx)
 
-* 
+* Fixed handling of the semantic link caption in the geographical coordinate datavalue class. 
 
 === Semantic Maps 1.0 ===
 (2011-07-19)
