--- a/LiveTranslate/RELEASE-NOTES
+++ b/LiveTranslate/RELEASE-NOTES
@@ -4,6 +4,11 @@ Extension page on mediawiki.org: http://www.mediawiki.org/wiki/Extension:Live_Tr
 Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/LiveTranslate/RELEASE-NOTES?view=co
 
 
+=== Version 1.2 ===
+2011-xx-xx
+
+* Added TMX admin user rights group.
+
 === Version 1.1.1 ===
 2011-06-22
 
