--- a/SubPageList/RELEASE-NOTES
+++ b/SubPageList/RELEASE-NOTES
@@ -4,6 +4,11 @@ Extension page on mediawiki.org: http://www.mediawiki.org/wiki/Extension:SubPage
 Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/trunk/extensions/SubPageList/RELEASE-NOTES?view=co
 
 
+=== Version 0.3.1 ===
+2011-07-xx
+
+* Fixed compatibility with MediaWiki 1.18.
+
 === Version 0.3 ===
 2011-03-05
 
