replaced setDescription by setMessage and up'ed rel notes
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@93644 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Maps/RELEASE-NOTES
+++ b/Maps/RELEASE-NOTES
@@ -8,9 +8,11 @@ http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log
 
 
 === Maps 1.0.1 ===
-(2011-xx-xx)
+(2011-0x-xx)
 
-* 
+* Added language parameter to the mapsdoc hook.
+
+* Use of Validator 0.4.10s setMessage method instead of setDescription for better i18n.
 
 === Maps 1.0 ===
 (2011-07-19)
