added alias file and added hash field to TM table for invalidation of locally cached data
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@93663 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/LiveTranslate/RELEASE-NOTES
+++ b/LiveTranslate/RELEASE-NOTES
@@ -7,6 +7,7 @@ Latest version of the release notes: http://svn.wikimedia.org/viewvc/mediawiki/t
 === Version 1.2 ===
 2011-xx-xx
 
+* Added i18n alias file.
 * Added TMX admin user rights group.
 
 === Version 1.1.1 ===
