fixed zoom parameter for google maps v3
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94064 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Maps/RELEASE-NOTES
+++ b/Maps/RELEASE-NOTES
@@ -14,6 +14,8 @@ http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log
 
 * Use of Validator 0.4.10s setMessage method instead of setDescription for better i18n.
 
+* Fixed zoom parameter for Google Maps v3.
+
 === Maps 1.0 ===
 (2011-07-19)
 
