do not load jQuery resizable by dfault, but fetch it when needed
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk/extensions@94105 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/Maps/RELEASE-NOTES
+++ b/Maps/RELEASE-NOTES
@@ -16,6 +16,8 @@ http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log
 
 * Fixed zoom parameter for Google Maps v3.
 
+* Minor improvement to script loading. 
+
 === Maps 1.0 ===
 (2011-07-19)
 
